20061120 code: added array_trunc as function, not macro.
20061120 code: scan cleanup.
20061120 code: fmt cleanup.
20070118 code: sysdeps update.
20070118 version: corelib 0.53
20070118 code: ht_() AND instead of modulo (HT_HASH_BUCKETS must be
               a power of two, this is not a problem).
20070119 code: test cleanups.
20070208 code: fixed bug in hashtable that would select the wrong key
               if two strings in the same slot shared a common prefix
               equal in length to the smaller string.
20070208 code: new cpj tools.
20070225 code: new installer.
20070225 code: libs-math, new sysdeps.
20070228 code: workaround in scan_u* for apparent gcc 3.4.6 compiler
               bug.
20070228 code: added sd-longlong sysdep. added HAVE_LONGLONG test to
               fmt and scan headers for better C90 compatibility.
20070228 code: added uint.
20070313 code: fixed uint...
20070320 code: iarray_sort and improved iarray tests.
20070322 code: fmt_float fmt_double
20070324 code: ht_clear_ext() no longer calls free(). thanks JN.
20070324 code: improved scan_double() tests.
20070324 code: scan_float() and scan_double() now accept scientific
               notation.
20070324 code: improved scan_fspec tests.
20070324 code: fixed double free() in ht_clear()
20070324 code: large test cleanup
20070324 code: scan_u*b() and re-wrote all scan tests.
20070118 version: corelib 0.531
20070326 code: renamed seek to fd_seek to clear possible name conflicts.
20070326 code: solaris 9 fixes for math related functions.
20070327 code: rewrite fmt_double() and fmt_float for scientific
               precision.
20070328 code: full tests for fmt_double() and fmt_float().
20070328 code: sysdeps update.
20070408 code: array_data.o was not being compiled. fixed.
20070408 code: cleaned up alloc.c and added alloc_zero().
20070409 code: API changes for hashtable. cleanups.
20070409 code: syserr updated to allow eight string arguments instead of six.